kled_derive/tests/ui/fails/unknown_type.stderr
error: Unknown literal value `Fail`
 --> $DIR/unknown_type.rs:4:19
  |
4 | #[operator(type = "Fail")]
  |                   ^^^^^^
